Removed duplicate min-widths in #ibm-top; fix for flickering menu content in IE9/Firefox

--- a/css/scss/shared/_adaptive.scss
+++ b/css/scss/shared/_adaptive.scss
@@ -393,6 +393,7 @@ a.ibm-thumbnail-module h3 {
 
 	.no-csstransforms3d #m-menu {
 		margin-right: -250px;
+		display: block;
 	}
 
 	.no-csstransforms3d .m-shift {
@@ -804,7 +805,6 @@ a.ibm-thumbnail-module h3 {
 	// to be removed.  only for testing
 		
 	#ibm-top {
-		min-width: 569px;
 		min-width: 600px;
 	}
 	
@@ -1092,7 +1092,6 @@ a.ibm-thumbnail-module h3 {
 //	}
 	
 	#ibm-top {
-		min-width: 600px;
 		min-width: 640px;
 	}
 	
@@ -1161,7 +1160,6 @@ a.ibm-thumbnail-module h3 {
 	
 	
 	#ibm-top {
-		min-width: 641px;
 		min-width: 768px;
 	}
 	
@@ -1461,7 +1459,6 @@ a.ibm-thumbnail-module h3 {
 //	}
 	
 	#ibm-top {
-		min-width: 769px;
 		min-width: 800px;
 	}
 	
